# projection_mapping

./: .gitignore  CMakeLists.txt  README.md  shader.frag  shader.vert
cmake/: FindPCL.cmake
include/: buffers.h  drawable.hpp  freenect_worker.h  ransac_cube.hpp  renderer.hpp  utility.hpp
include/glfw_renderer/: buffer_builder.hpp  camera_builder.hpp  float_buffer.hpp  geometry_buffer.hpp  gl_engine.hpp  loader.hpp  renderer.hpp  resolver.hpp  scenegraph.hpp  shader_program.hpp  shape_factory.hpp
lib/: install_freenect  install_pcl
src/: cube_generator.cpp  drawable.cpp  main.cpp  ransac_cube.cpp  ransac_cube_test.cpp  utility.cpp
test/: ransac_cube_test.cpp  ransac_plane_test.cpp  renderer_test.cpp
